--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+
 }
 
 android {
@@ -41,28 +44,68 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.20"
+    // Navigation Component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
 
-    def room_version = "2.2.5"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    //kapt "androidx.room:room-compiler:$room_version"
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:$room_version"
+    // Room components
+    implementation "androidx.room:room-runtime:2.4.0-alpha04"
+    kapt "androidx.room:room-compiler:2.4.0-alpha04"
+    implementation "androidx.room:room-ktx:2.4.0-alpha04"
+    androidTestImplementation "androidx.room:room-testing:2.4.0-alpha04"
 
+    // Lifecycle components
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
+    // Kotlin components
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 
-    // - - ViewModel and LiveData
-    def lifecycle_version = "2.3.0"
-    //implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    //implementation "androidx.lifecycle:lifecycle-extensions: lifecycle_version = 2.3.0"
-    //annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.3.0'
+//    // Navigation Component
+//    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
+//    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+//
+//    // Room components
+//    implementation "androidx.room:room-runtime:2.4.0-alpha04"
+//    kapt "androidx.room:room-ktx:2.4.0-alpha04"
+//    implementation "androidx.room:room-ktx:2.4.0-alpha04"
+//    androidTestImplementation "androidx.room:room-testing:2.4.0-alpha04"
+//
+//    // Lifecycle components
+//    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+//    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+//
+//    // Kotlin components
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+//    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
+//    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 
-
-    // - - Kotlin Coroutines
-    def coroutines_version = "1.3.5"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+   // implementation fileTree(dir: "libs", include: ["*.jar"])
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.20"
+//
+//    def room_version = "2.2.5"
+//    implementation "androidx.room:room-runtime:$room_version"
+//    annotationProcessor "androidx.room:room-compiler:$room_version"
+//    //kapt "androidx.room:room-compiler:$room_version"
+//    // optional - Kotlin Extensions and Coroutines support for Room
+//    implementation "androidx.room:room-ktx:$room_version"
+//
+//
+//
+//    // - - ViewModel and LiveData
+//    def lifecycle_version = "2.3.0"
+//    //implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+//    //implementation "androidx.lifecycle:lifecycle-extensions: lifecycle_version = 2.3.0"
+//    //annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.3.0'
+//
+//
+//    // - - Kotlin Coroutines
+//    def coroutines_version = "1.3.5"
+//
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
